[tool.poetry]
name = "agentipy"
version = "0.1.0"
description = ""
authors = ["Muhammed Talha Korkmaz <kriptovekediler@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.13.0"
requests = "2.32.3"
python-dotenv = "1.0.1"
numpy = "2.2.0"
base58 = "^2.1.1"
aiohttp = "^3.11.10"
pillow = "^11.0.0"
openai = "^1.58.1"
solana = "^0.36.1"
solders = "^0.23.0"
pydantic = "^2.10.4"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^2.5.0"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
black = "24.10.0"
isort = "^5.10.0"
