[tool.poetry]
name = "agentipy"
version = "1.2.8"
description = "A Python toolkit for Solana agents"
authors = ["Muhammed Talha Korkmaz <kriptovekediler@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/niceberginc/agentipy"
repository = "https://github.com/niceberginc/agentipy"
keywords = ["solana", "sdk", "blockchain", "tools"]


[tool.poetry.dependencies]
python = "3.13.0"
requests = "2.32.3"
base58 = "^2.1.1"
pillow = "^11.0.0"
openai = "^1.58.1"
pydantic = "^2.10.4"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^2.5.0"
setuptools = "^75.6.0"
langchain = "^0.3.12"
wheel = "^0.45.1"
twine = "^6.0.1"
numpy = "^1.26.2,<3"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.11"
solders = "^0.21.0,<0.24.0"
solana = "^0.35.0"
anchorpy = "^0.20.1"
pythclient = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
black = "24.10.0"
isort = "^5.10.0"
